app/kubManifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: sqldb
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: employeeapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: backend
      app.kubernetes.io/part-of: employeeapp
  replicas: 1  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: employeeapp
    spec:
      containers:
      - name: mysql-pod
        image: 636276102612.dkr.ecr.us-east-1.amazonaws.com/mysql_image
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
