app/kubManifest/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: sqldb
spec:
  containers:
  - name: mysql-pod
    image: 636276102612.dkr.ecr.us-east-1.amazonaws.com/mysql_image
    ports:
    - containerPort: 3306
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
