app/kubManifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1-svc
  namespace: webapp
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: employeeapp
    app.kubernetes.io/instance: myapp-v1
    app.kubernetes.io/version: v1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: employeeapp
    app.kubernetes.io/instance: myapp-v1
    app.kubernetes.io/version: v1
